syntax = "proto3";

package age;

option go_package = "./pb";

service AgeService {
    rpc GetAge (AgeRequest) returns (AgeResponse);
    rpc ComputeAverageAge (stream AverageAgeRequest) returns (AverageAgeResponse);
}

message AgeRequest {
    string birthdate = 1; // Format: "YYYY-MM-DD"
}

message AgeResponse {
    int32 age = 1;
    bool is_adult = 2;
}

message AverageAgeRequest {
    int32 age = 1;
}

message AverageAgeResponse {
    double average = 1;
}